c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/tag_resolution/distinct_struct_types.c
int foo(void) {
    struct s {
        int a;
        int b;
    };
    struct s result = {1, 2};
    return result.a + result.b;
}

int main(void) {
    // previously defined struct s is not in scope here,
    // so this is declares a new incomplete type
    struct s;
    // this is illegal because it defines a variable with an incomplete type
    struct s blah = {foo(), foo()};
    return blah.a;
}